src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>DOC_DAT_Asociacion_Documentacion__c</fullName>
        <description>Fecha de asociación de la documentación</description>
        <label>Fecha de asociación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOC_DAT_Fecha_Expiracion__c</fullName>
        <description>Campo que recoge la fecha de expiración de un documento</description>
        <label>Fecha de Expiración</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOC_SEL_Tipo_Documento__c</fullName>
        <description>Campo que recoge el tipo de documento cargado</description>
        <label>Tipo de Documento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Peritación</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Cambio de Perito</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Albarán de Profesional</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Factura Indemnizable</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Documentación Indemnizable</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>Verificaciones</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>Informe Pericial</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>Facturas Devueltas</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>Otros</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>OK perito</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Fotos Servicio</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Cartas de Rechazo de Albaranes de Revisión</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Cartas</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Reclamaciones/Incidencias</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>PER</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Carta importe indemnizado</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Carta de cantidad a disposición de asegurado</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Carta de solicitud de documentación</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Carta de rechazo</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Carta Informativa</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Carta a perjudicado</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Carta a causante</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Autorización de Cia</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Resolución Cia</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Autorización de Cia2</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>Minuta</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>Facturas</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>Denuncia</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>Informe técnico</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Presupuestos</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOC_TXT_Descripcion_Adicional__c</fullName>
        <description>Descripción adicional del documento</description>
        <label>Descripción adicional</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DOC_TXT_Identificador__c</fullName>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>FIL_RT_Migracion</fullName>
        <active>true</active>
        <label>Migración</label>
    </recordTypes>
</CustomObject>